--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -1,7 +1,4 @@
 <div class="favorite-menu">
-    <div class="upper-block">
-        <span>Отложенные товары</span>
-    </div>
     <div class="body-favorite">
         <div class="items">
             <img src="/images/items/test.jpg" alt="">
@@ -9,155 +6,22 @@
                 <a href="">Саббуфер</a>
                 <span>1500 Вт</span>
             </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="items">
-            <img src="/images/items/test.jpg" alt="">
-            <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
-            </div>
-            <div class="icon">
-                <svg>
-                    <use xlink:href="/main.svg#cart-svg"></use>
-                </svg>
-            </div>
-            <div class="icon">
-                <svg class="stroke">
-                    <use xlink:href="/main.svg#close-svg"></use>
-                </svg>
+            <div class="right">
+                <span>16000 ₽</span>
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="/main.svg#cart-svg"></use>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg class="stroke">
+                        <use xlink:href="/main.svg#close-svg"></use>
+                    </svg>
+                </div>
             </div>
         </div>
     </div>
     <div class="btn-incart">
-        <span>В корзину</span>
+        <span>Вcё в корзину</span>
     </div>
 </div>
