--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -3,8 +3,88 @@
         <div class="items">
             <img src="/images/items/test.jpg" alt="">
             <div class="name">
-                <a href="">Саббуфер</a>
-                <span>1500 Вт</span>
+                <a href="">Саббуфер в машину</a>
+                <span>Мощность: 1500 ВТ, Размер: 16 R</span>
+            </div>
+            <div class="right">
+                <span>16000 ₽</span>
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="/main.svg#cart-svg"></use>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg class="stroke">
+                        <use xlink:href="/main.svg#close-svg"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="items">
+            <img src="/images/items/test.jpg" alt="">
+            <div class="name">
+                <a href="">Саббуфер в машину</a>
+                <span>Мощность: 1500 ВТ, Размер: 16 R</span>
+            </div>
+            <div class="right">
+                <span>16000 ₽</span>
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="/main.svg#cart-svg"></use>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg class="stroke">
+                        <use xlink:href="/main.svg#close-svg"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="items">
+            <img src="/images/items/test.jpg" alt="">
+            <div class="name">
+                <a href="">Саббуфер в машину</a>
+                <span>Мощность: 1500 ВТ, Размер: 16 R</span>
+            </div>
+            <div class="right">
+                <span>16000 ₽</span>
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="/main.svg#cart-svg"></use>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg class="stroke">
+                        <use xlink:href="/main.svg#close-svg"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="items">
+            <img src="/images/items/test.jpg" alt="">
+            <div class="name">
+                <a href="">Саббуфер в машину</a>
+                <span>Мощность: 1500 ВТ, Размер: 16 R</span>
+            </div>
+            <div class="right">
+                <span>16000 ₽</span>
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="/main.svg#cart-svg"></use>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg class="stroke">
+                        <use xlink:href="/main.svg#close-svg"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="items">
+            <img src="/images/items/test.jpg" alt="">
+            <div class="name">
+                <a href="">Саббуфер в машину</a>
+                <span>Мощность: 1500 ВТ, Размер: 16 R</span>
             </div>
             <div class="right">
                 <span>16000 ₽</span>
