--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -95,11 +95,58 @@ a:focus-visible {
 
 .auth {
   position: absolute;
-  top: calc(50% - 150px);
-  left: calc(50% - 200px);
-  width: 400px;
-  height: 300px;
+  top: calc(50% - 300px);
+  left: calc(50% - 300px);
+  width: 600px;
+  height: 600px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  box-shadow: 0px 0px 10px rgba(153, 153, 153, 0.8);
+  border-radius: 5px;
+}
+.auth h1 {
+  margin-top: 75px;
+}
+.auth a {
+  width: 300px;
+  height: 75px;
+  margin: 20px auto 20px auto;
+}
+.auth a svg {
+  width: 100%;
+  height: 75px;
+}
+.auth input {
+  width: 350px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  padding-left: 10px;
+  background: whitesmoke;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+}
+.auth input:focus-visible {
+  outline: 0;
+  border-color: grey;
+}
+.auth button {
+  width: 350px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  background: #FF6600;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(153, 153, 153, 0.8);
+  font-size: 18px;
+  transition: 0.4s;
+}
+.auth button:hover {
+  box-shadow: 0px 0px 10px #FF6600;
+  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
 }/*# sourceMappingURL=admin.css.map */
