--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -1,3 +1,4 @@
+$primary-orange: #FF6600;
 
 /* Box sizing rules */
 *,
@@ -98,11 +99,65 @@ a {
 
 .auth {
     position: absolute;
-    top: calc(50% - 150px);
-    left: calc(50% - 200px);
-    width: 400px;
-    height: 300px;
+    top: calc(50% - 300px);
+    left: calc(50% - 300px);
+    width: 600px;
+    height: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    box-shadow: 0px 0px 10px rgba(153, 153, 153, .8);
+    border-radius: 5px;
+
+    h1{
+        margin-top: 75px;
+    }
+
+    a{
+        width: 300px;
+        height: 75px;
+        margin: 20px auto 20px auto;
+
+        svg{
+            width: 100%;
+            height: 75px;
+        }
+    }
+
+    input{
+        width: 350px;
+        height: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        padding-left: 10px;
+        background: whitesmoke;
+        border: 1px solid lightgrey;
+        border-radius: 5px;
+
+        &:focus-visible{
+            outline: 0;
+            border-color: grey;
+        }
+    }
+
+    button{
+        width: 350px;
+        height: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+        background: $primary-orange;
+        border: 0px;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        box-shadow: 0px 0px 10px rgba(153, 153, 153, .8);
+        font-size: 18px;
+        transition: .4s;
+
+        &:hover{
+            box-shadow: 0px 0px 10px $primary-orange;
+            text-shadow: 0px 0px 5px rgba(255, 255, 255, .6);
+        }
+    }
 }
