admin panel added

--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -82,7 +82,9 @@ html {
 }
 
 body {
+    display: flex;
     width: 100%;
+    height: 100vh;
     background: white;
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -108,22 +110,22 @@ a {
     box-shadow: 0px 0px 10px rgba(153, 153, 153, .8);
     border-radius: 5px;
 
-    h1{
+    h1 {
         margin-top: 75px;
     }
 
-    a{
+    a {
         width: 300px;
         height: 75px;
         margin: 20px auto 20px auto;
 
-        svg{
+        svg {
             width: 100%;
             height: 75px;
         }
     }
 
-    input{
+    input {
         width: 350px;
         height: 50px;
         margin-left: auto;
@@ -134,13 +136,13 @@ a {
         border: 1px solid lightgrey;
         border-radius: 5px;
 
-        &:focus-visible{
+        &:focus-visible {
             outline: 0;
             border-color: grey;
         }
     }
 
-    button{
+    button {
         width: 350px;
         height: 50px;
         margin-left: auto;
@@ -155,9 +157,246 @@ a {
         font-size: 18px;
         transition: .4s;
 
-        &:hover{
+        &:hover {
             box-shadow: 0px 0px 10px $primary-orange;
             text-shadow: 0px 0px 5px rgba(255, 255, 255, .6);
+        }
+    }
+}
+
+.navigation-menu {
+    width: 300px;
+    height: 100vh;
+    background: #333;
+    box-shadow: 0px 0px 20px rgba(153, 153, 153, .8);
+
+    a {
+        div {
+            width: 100%;
+            height: 64px;
+            color: white;
+            font-weight: inherit;
+            font-size: 20px;
+            line-height: 64px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+            transition: color .2s;
+
+            &:hover {
+                color: $primary-orange;
+            }
+
+        }
+    }
+
+    .scrollbar {
+        width: 100%;
+        height: calc(100vh - 130px);
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 0px;
+        }
+
+        div {
+            width: 100%;
+            height: 64px;
+            color: white;
+            font-weight: inherit;
+            font-size: 20px;
+            line-height: 64px;
+            border: 0;
+            transition: color .2s;
+            cursor: pointer;
+
+            &:hover {
+                color: $primary-orange;
+            }
+        }
+    }
+
+    .exit {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 64px;
+        border-top: 1px solid rgba(255, 255, 255, 0.08);
+        cursor: pointer;
+
+        svg {
+            fill: none;
+            stroke: white;
+            transition: stroke .2s;
+            width: 32px;
+            height: 32px;
+            margin: 16px 0 16px 0;
+        }
+
+        span {
+            color: white;
+            line-height: 64px;
+            font-size: 20px;
+            transition: color .2s;
+        }
+
+        &:hover {
+            svg {
+                stroke: $primary-orange;
+            }
+
+            span {
+                color: $primary-orange;
+            }
+        }
+    }
+}
+
+.burger-btn {
+    display: none;
+}
+
+.blur {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(153, 153, 153, .8);
+    z-index: 2;
+
+    &.active {
+        display: block;
+    }
+}
+
+header {
+    width: calc(100% - 300px);
+    height: 128px;
+    background: white;
+    border-bottom: 1px solid whitesmoke;
+
+    a {
+        svg {
+            width: 300px;
+            height: 64px;
+            margin: 0 12px 0 12px;
+        }
+
+
+    }
+
+    form {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 64px;
+
+        input {
+            width: calc(80% - 64px);
+            height: 40px;
+            margin: 11px 0 11px 0;
+            border: 0;
+            border-bottom: 1px solid lightgrey;
+            padding-left: 12px;
+
+            &:focus-visible {
+                outline: 0;
+            }
+        }
+
+        button {
+            width: 40px;
+            height: 40px;
+            margin: 11px 0 11px 0;
+            padding: 0;
+            border: 0;
+            background: 0;
+            cursor: pointer;
+
+            svg {
+                width: 30px;
+                height: 30px;
+                margin: 5px;
+                transition: fill .2s;
+            }
+
+            &:hover {
+                svg {
+                    fill: $primary-orange;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .auth {
+        left: 0;
+        width: 100%;
+        box-shadow: 0 0 0 0;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .navigation-menu {
+        position: absolute;
+        margin-left: -300px;
+        transition: margin-left .3s;
+        z-index: 3;
+
+        &.active {
+            margin-left: 0px;
+        }
+    }
+
+    .burger-btn {
+        display: block;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 64px;
+        width: 64px;
+        cursor: pointer;
+
+        svg {
+            width: 50px;
+            height: 50px;
+            margin: 6px;
+            transition: fill .2s;
+        }
+
+        &:hover {
+            svg {
+                fill: $primary-orange;
+            }
+        }
+    }
+
+    header {
+        width: 100%;
+
+        form {
+
+            input {
+                width: calc(100% - 64px);
+                height: 40px;
+                margin: 11px 0 11px 0;
+                border: 0;
+                border-bottom: 1px solid lightgrey;
+                padding-left: 12px;
+
+                &:focus-visible {
+                    outline: 0;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 460px) {
+    header{
+        a{
+            text-align: right;
         }
     }
 }
