added cookie parcer

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -24,7 +24,7 @@
             </svg>
         </a> 
         <%- locals.say %>
-        <input type="login" name="login" id="login" required placeholder="Email...">
+        <input type="login" name="login" id="login" required placeholder="Login...">
         <input type="password" name="password" id="password" required placeholder="Password...">
         <button type="submit">Войти</button>
     </form>
