--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -241,24 +241,28 @@ a:focus-visible {
   display: block;
 }
 
-header {
+.body {
   width: calc(100% - 300px);
+  height: 100vh;
+}
+.body header {
+  width: 100%;
   height: 128px;
   background: white;
   border-bottom: 1px solid whitesmoke;
 }
-header a svg {
+.body header a svg {
   width: 300px;
   height: 64px;
   margin: 0 12px 0 12px;
 }
-header form {
+.body header form {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 64px;
 }
-header form input {
+.body header form input {
   width: calc(80% - 64px);
   height: 40px;
   margin: 11px 0 11px 0;
@@ -266,10 +270,10 @@ header form input {
   border-bottom: 1px solid lightgrey;
   padding-left: 12px;
 }
-header form input:focus-visible {
+.body header form input:focus-visible {
   outline: 0;
 }
-header form button {
+.body header form button {
   width: 40px;
   height: 40px;
   margin: 11px 0 11px 0;
@@ -278,14 +282,69 @@ header form button {
   background: 0;
   cursor: pointer;
 }
-header form button svg {
+.body header form button svg {
   width: 30px;
   height: 30px;
   margin: 5px;
   transition: fill 0.2s;
 }
-header form button:hover svg {
+.body header form button:hover svg {
   fill: #FF6600;
+}
+.body .main {
+  display: none;
+  width: 100%;
+  height: calc(100vh - 129px);
+}
+.body .orders {
+  width: 100%;
+  height: calc(100vh - 129px);
+}
+.body .orders .sort-menu {
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%;
+  height: 50px;
+  line-height: 30px;
+  border-bottom: 1px solid whitesmoke;
+  background: white;
+}
+.body .orders .sort-menu .sort-type {
+  padding: 0 12px 0 12px;
+  height: 30px;
+  border-left: 1px solid lightgrey;
+  font-size: 16px;
+  color: grey;
+  cursor: pointer;
+  overflow: hidden;
+  transition: color 0.2s;
+}
+.body .orders .sort-menu .sort-type:hover {
+  color: #FF6600;
+}
+.body .orders .scroll {
+  overflow-y: scroll;
+}
+.body .orders .scroll::-webkit-scrollbar {
+  width: 0;
+}
+.body .orders .scroll .order {
+  width: 100%;
+  max-height: 64px;
+  background: white;
+}
+.body .orders .scroll .order .small {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(5, 1fr);
+  line-height: 64px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.body .orders .scroll .order .small:hover {
+  background: rgba(153, 153, 153, 0.4);
 }
 
 @media screen and (max-width: 600px) {
@@ -323,23 +382,18 @@ header form button:hover svg {
   .burger-btn:hover svg {
     fill: #FF6600;
   }
-  header {
+  .body {
     width: 100%;
   }
-  header form input {
-    width: calc(100% - 64px);
-    height: 40px;
-    margin: 11px 0 11px 0;
-    border: 0;
-    border-bottom: 1px solid lightgrey;
-    padding-left: 12px;
+  .body header {
+    width: 100%;
   }
-  header form input:focus-visible {
-    outline: 0;
+  .body header form input {
+    width: calc(100% - 64px);
   }
 }
 @media screen and (max-width: 460px) {
-  header a {
+  .body header {
     text-align: right;
   }
 }/*# sourceMappingURL=admin.css.map */
